# PotJack

Backend/: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .prettierrc.js  BLOCKCHAIN_CONFIG.md  Dockerfile  README.md  WEBSOCKET_MONITORING.md  docker-compose.yml  docker-compose.yml_template  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
Backend/idl/: raffle.json
Backend/public/: graphql-playground.html
Backend/src/: index.ts
EVM smart-contract/: .env.example  .gitignore  README.md  globals.d.ts  hardhat.config.ts  package-lock.json  package.json
EVM smart-contract/config/: networks.json.example  tokens.json
EVM smart-contract/contracts/: Raffle.sol
EVM smart-contract/scripts/: config-loader.js  deploy.js
EVM smart-contract/test/: Raffle.test.ts  RaffleExpiredRaffles.test.ts
Frontend/: Dockerfile  README.md  codegen.ts  docker-compose.yml_template  eslint.config.js  index.html  nginx.conf  package.json  prettierrc.json  schema.graphql  tsconfig.app.json  vite.config.ts
Frontend/scripts/: replace-variables.sh  start.sh
Frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
Landing/: Dockerfile  docker-compose.yml_template  nginx.conf  package.json
Landing/scripts/: replace-variables.sh  start.sh
Solana smart-contract/: .eslintrc.yml  .gitignore  .prettierignore  .prettierrc.yml  Anchor.toml  README.md  package.json  tsconfig.json
Solana smart-contract/programs/bclot/: Cargo.toml
Solana smart-contract/programs/bclot/src/: admin.rs  lib.rs  price_feeds.rs  vrf.rs
(+538 files in other folders)
